[package]
name = "milky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.3.11"
mepeyew = "0.3"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
raw-window-handle = "0.6.0"
winit = "0.29.10"
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }
mime = "0.3.17"
mime_guess = "2.0.4"
notify = "6.1.1"

[[example]]
name = "flappy_bird"
path = "../examples/flappy_bird.rs"
